Fix up image centering on mobile

--- a/main.css
+++ b/main.css
@@ -50,7 +50,10 @@ only screen and (min-device-width : 320px) and (max-device-width : 480px),
 only screen and (-webkit-min-device-pixel-ratio : 1.5),
 only screen and (min-device-pixel-ratio : 1.5) {
   img#logo {
-    padding: 3em 3em 3em;
+    float: none;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
   h1 {
     text-align: center;
